done ui login logout

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- built files will be auto injected -->\
+  <!-- built files will be auto injected -->
   <!-- built files will be auto injected -->
   <!-- Bootstrap JS Scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
